--- a/ww_sale_whatsapp/views/purchase_order_views.xml
+++ b/ww_sale_whatsapp/views/purchase_order_views.xml
@@ -5,11 +5,12 @@
     <field name="model">purchase.order</field>
     <field name="inherit_id" ref="purchase.purchase_order_form"/>
     <field name="arch" type="xml">
-      <xpath expr="//header/button[@name='action_rfq_send']" position="after">
+      <xpath expr="//header" position="inside">
         <button name="action_open_whatsapp_wizard"
                 type="object"
                 string="Enviar por WhatsApp"
-                class="oe_highlight"/>
+                class="oe_highlight"
+                invisible="[('state', 'not in', [ 'done'])]"/>
       </xpath>
     </field>
   </record>
