--- a/ww_sale_whatsapp/views/sale_order_views.xml
+++ b/ww_sale_whatsapp/views/sale_order_views.xml
@@ -5,11 +5,12 @@
     <field name="model">sale.order</field>
     <field name="inherit_id" ref="sale.view_order_form"/>
     <field name="arch" type="xml">
-      <xpath expr="//header/button[@name='action_quotation_send']" position="after">
+      <xpath expr="//header" position="inside">
         <button name="action_open_whatsapp_wizard"
                 type="object"
                 string="Enviar por WhatsApp"
-                class="oe_highlight"/>
+                class="oe_highlight"
+                invisible="[('state', 'in', [ 'sent', 'cancel'])]"/>
       </xpath>
     </field>
   </record>
