--- a/ww_sale_whatsapp/views/purchase_order_views.xml
+++ b/ww_sale_whatsapp/views/purchase_order_views.xml
@@ -4,13 +4,13 @@
     <field name="name">purchase.order.form.whatsapp.waha</field>
     <field name="model">purchase.order</field>
     <field name="inherit_id" ref="purchase.purchase_order_form"/>
-    <field name="arch" type="xml">
-      <xpath expr="//header" position="inside">
+    <field name="priority" eval="99"/> <field name="arch" type="xml">
+      <xpath expr="//header/field[@name='state']" position="before">
         <button name="action_open_whatsapp_wizard"
                 type="object"
                 string="Enviar por WhatsApp"
                 class="oe_highlight"
-                invisible="[('state', 'not in', [ 'done'])]"/>
+                invisible="[('state', 'not in', ['purchase', 'done'])]"/>
       </xpath>
     </field>
   </record>
