--- a/ww_sale_whatsapp/views/res_config_settings_view.xml
+++ b/ww_sale_whatsapp/views/res_config_settings_view.xml
@@ -1,36 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <odoo>
-  <record id="view_res_config_settings_ww_waha" model="ir.ui.view">
-    <field name="name">res.config.settings.view.form.ww.waha</field>
+  <record id="res_config_settings_view_form_whatsapp" model="ir.ui.view">
+    <field name="name">res.config.settings.view.form.inherit.whatsapp</field>
     <field name="model">res.config.settings</field>
     <field name="inherit_id" ref="base.res_config_settings_view_form"/>
     <field name="arch" type="xml">
-      <!-- alguns builds não têm <sheet>; insere direto no <form> -->
-      <xpath expr="//form" position="inside">
-        <div class="app_settings_block" id="ww_waha_block">
-          <h2>WhatsApp (WAHA Plus)</h2>
-          <div class="row o_settings_container">
-            <div class="col-12 col-lg-6 o_setting_box">
-              <div class="o_setting_left_pane">
-                <field name="waha_enabled"/>
+      <xpath expr="//div[@data-key='base']" position="after">
+          <div class="app_settings_block" data-string="WhatsApp" string="WhatsApp" data-key="ww_send_whatsapp">
+              <h2>Configurações do WhatsApp (WAHA)</h2>
+              <div class="row mt16 o_settings_container">
+                  <div class="col-12 col-lg-6 o_setting_box">
+                      <div class="o_setting_right_pane">
+                          <span class="o_form_label">Conexão WAHA</span>
+                          <div class="text-muted">
+                              Configure os detalhes da sua instância WAHA Plus.
+                          </div>
+                          <div class="content-group">
+                              <div class="row mt16">
+                                  <label for="waha_base_url" class="col-lg-3 o_light_label"/>
+                                  <field name="waha_base_url"/>
+                              </div>
+                              <div class="row">
+                                  <label for="waha_api_key" class="col-lg-3 o_light_label"/>
+                                  <field name="waha_api_key" password="True"/>
+                              </div>
+                              <div class="row">
+                                  <label for="waha_session" class="col-lg-3 o_light_label"/>
+                                  <field name="waha_session"/>
+                              </div>
+                              <div class="row">
+                                  <label for="waha_timeout" class="col-lg-3 o_light_label"/>
+                                  <field name="waha_timeout"/>
+                              </div>
+                          </div>
+                           <div class="mt16">
+                              <button name="action_test_waha" type="object" string="Testar Conexão" class="btn-secondary"/>
+                          </div>
+                      </div>
+                  </div>
               </div>
-              <div class="o_setting_right_pane">
-                <label for="waha_enabled"/>
-                <div class="text-muted">Envie PDFs de pedidos via WAHA Plus diretamente pelo Odoo.</div>
-                <div class="content-group mt16">
-                  <group col="2">
-                    <field name="waha_base_url" placeholder="http://10.1.100.10:4000"/>
-                    <field name="waha_api_key" password="True" placeholder="X-Api-Key"/>
-                    <field name="waha_session" placeholder="workwise"/>
-                    <field name="waha_timeout"/>
-                    <field name="waha_file_transport"/>
-                  </group>
-                  <button name="action_test_waha" type="object" string="Testar conexão" class="btn-secondary mt8"/>
-                </div>
-              </div>
-            </div>
           </div>
-        </div>
       </xpath>
     </field>
   </record>
