--- a/ww_sale_whatsapp/views/sale_order_views.xml
+++ b/ww_sale_whatsapp/views/sale_order_views.xml
@@ -4,7 +4,8 @@
     <field name="name">sale.order.form.whatsapp.waha</field>
     <field name="model">sale.order</field>
     <field name="inherit_id" ref="sale.view_order_form"/>
-    <field name="priority" eval="99"/> <field name="arch" type="xml">
+    <field name="priority" eval="99"/>
+    <field name="arch" type="xml">
       <xpath expr="//header/field[@name='state']" position="before">
         <button name="action_open_whatsapp_wizard"
                 type="object"
