--- a/ww_sale_whatsapp/views/res_config_settings_view.xml
+++ b/ww_sale_whatsapp/views/res_config_settings_view.xml
@@ -5,15 +5,15 @@
     <field name="model">res.config.settings</field>
     <field name="inherit_id" ref="base.res_config_settings_view_form"/>
     <field name="arch" type="xml">
-      <xpath expr="//div[@data-key='base']" position="after">
-          <div class="app_settings_block" data-string="WhatsApp" string="WhatsApp" data-key="ww_send_whatsapp">
+      <xpath expr="//div[hasclass('settings')]" position="inside">
+          <div class="app_settings_block" data-string="WhatsApp" string="WhatsApp" data-key="ww_sale_whatsapp">
               <h2>Configurações do WhatsApp (WAHA)</h2>
               <div class="row mt16 o_settings_container">
                   <div class="col-12 col-lg-6 o_setting_box">
                       <div class="o_setting_right_pane">
                           <span class="o_form_label">Conexão WAHA</span>
                           <div class="text-muted">
-                              Configure os detalhes da sua instância WAHA Plus.
+                              Configure os detalhes da sua instância WAHA.
                           </div>
                           <div class="content-group">
                               <div class="row mt16">
